Fixed bugs for break interval changes; added chime effect;

--- a/docs/style.css
+++ b/docs/style.css
@@ -7,11 +7,13 @@ body {
     display: flex;
     width: 40%;
     background: #999;
+    position: relative;
 }
 .mainTime{
     font-size: 30px;
     justify-content: center;
     text-align: center;
+    font-weight: 800;
 }
 .startWork{
     
@@ -30,22 +32,29 @@ body {
     justify-content: flex-end;
 }
 .breakPlus {
-    
+    margin-right: 35px;
+    width: 25px;
 }
 .breakMinus {
-    
+    width: 25px;
 }
 .workPlus {
-    
+    width: 25px;
 }
 .workMinus {
-    
+    margin-left: 35px;
+    width: 25px;
 }
 .workTime{
-    
+    font-size: 20px;
+    text-align: center;
 }
 .breakTime{
-    
+    font-size: 20px;
+    text-align: center;
+}
+.titleTimer{
+    font-size: 16px;
 }
 
 .canvas {
